[gd_scene load_steps=2 format=3 uid="uid://dbyyvklc6o551"]

[ext_resource type="Script" uid="uid://ihxn6jxxfi2p" path="res://addons/NotificationEngine/scripts/notification.gd" id="1_tmvfg"]

[node name="Notification" type="PanelContainer"]
offset_right = 427.0
offset_bottom = 21.0
mouse_filter = 1
script = ExtResource("1_tmvfg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="Header" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/Header"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 5

[node name="Title" type="RichTextLabel" parent="VBoxContainer/Header/MarginContainer"]
visible = false
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
fit_content = true

[node name="Body" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="BodyStack" type="VBoxContainer" parent="VBoxContainer/Body"]
layout_mode = 2

[node name="BodyContent" type="HBoxContainer" parent="VBoxContainer/Body/BodyStack"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer/Body/BodyStack/BodyContent"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
expand_mode = 4
stretch_mode = 4

[node name="Body" type="RichTextLabel" parent="VBoxContainer/Body/BodyStack/BodyContent"]
visible = false
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
bbcode_enabled = true
fit_content = true

[node name="actions_container" type="HFlowContainer" parent="VBoxContainer/Body/BodyStack"]
visible = false
layout_mode = 2
